Fixed a bug where user preferences on mobile devices for dark/light mode overrides set styling

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -85,7 +85,7 @@
 }
 
 .photo {
-  background: #ddd;
+  background-color: #ddd;
   padding: 5px;
   max-width: fit-content;
   max-height: fit-content;
